updating corrected configs

--- a/example/costmap_config.yaml
+++ b/example/costmap_config.yaml
@@ -21,4 +21,4 @@ nonpersisting_obstacle_layer:
 
 # in list of plugins for local/global
 plugins:
- - {name: nonpersisting_obstacle_layer, type: "costmap_2d/NonpersistentVoxelLayer"}
+ - {name: nonpersisting_obstacle_layer, type: "costmap_2d::NonpersistentVoxelLayer"}
