--- a/example/costmap_config.yaml
+++ b/example/costmap_config.yaml
@@ -24,4 +24,4 @@ global_costmap:
 
       # in list of plugins for local/global
       plugins:
-       - {name: nonpersisting_obstacle_layer, type: "nav2_costmap_2d::NonPersistentVoxelLayer"}
+       - {name: nonpersisting_obstacle_layer, type: "nav2_costmap_2d/NonPersistentVoxelLayer"}
