--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format ="3">
     <name>nonpersistent_voxel_layer</name>
-    <version>2.0.1</version>
+    <version>2.0.2</version>
     <description>include
         This package provides an implementation of a 3D costmap that takes in sensor
         data from the world, builds a 3D occupancy grid of the data for only one iteration.
@@ -31,6 +31,8 @@
     <depend>nav2_voxel_grid</depend>
     <depend>nav2_costmap_2d</depend>
     <depend>libpcl-all</depend>
+
+    <test_depend>ament_lint_auto</test_depend>
 
   <export>
     <nav2_costmap_2d plugin="${prefix}/costmap_plugins.xml" />
