--- a/example/costmap_config.yaml
+++ b/example/costmap_config.yaml
@@ -1,24 +1,27 @@
-# in costmap commons
-nonpersisting_obstacle_layer:
-  enabled:              true
-  track_unknown_space:  true
-  max_obstacle_height:  1.7
-  unknown_threshold:    15
-  mark_threshold:       0
-  combination_method:   1
-  obstacle_range: 3.0
-  origin_z: 0.2
-  z_resolution: 0.1
-  z_voxels: 16
-  publish_voxel_map: true
-  observation_sources: rgbd
-  rgbd:
-    data_type: PointCloud2
-    topic: camera/depth/points
-    marking: true
-    min_obstacle_height: 0.7
-    max_obstacle_height: 1.7
+global_costmap:
+  global_costmap:
+    ros__parameters:
+      # in costmap commons
+      nonpersisting_obstacle_layer:
+        enabled:              true
+        track_unknown_space:  true
+        max_obstacle_height:  1.7
+        unknown_threshold:    15
+        mark_threshold:       0
+        combination_method:   1
+        obstacle_range: 10.0
+        origin_z: 0.0
+        z_resolution: 0.05
+        z_voxels: 16
+        publish_voxel_map: true
+        observation_sources: rgbd
+        rgbd:
+          data_type: PointCloud2
+          topic: camera/depth/points
+          marking: true
+          min_obstacle_height: 0.0
+          max_obstacle_height: 1.7
 
-# in list of plugins for local/global
-plugins:
- - {name: nonpersisting_obstacle_layer, type: "costmap_2d::NonPersistentVoxelLayer"}
+      # in list of plugins for local/global
+      plugins:
+       - {name: nonpersisting_obstacle_layer, type: "nav2_costmap_2d/NonPersistentVoxelLayer"}
